--- a/result.html
+++ b/result.html
@@ -10,14 +10,13 @@
       font-family: Arial, sans-serif;
       padding: 40px;
       line-height: 1.8;
+      margin: 0;
     }
-
     h1 {
       color: #d1b2ff;
       text-align: center;
       margin-bottom: 30px;
     }
-
     .report {
       background-color: #2a1b4d;
       padding: 30px;
@@ -26,16 +25,14 @@
       max-width: 800px;
       margin: auto;
       white-space: pre-wrap;
-      overflow-wrap: break-word;
+      word-break: break-word;
     }
-
     .button-group {
       display: flex;
       justify-content: center;
       gap: 20px;
       margin-top: 40px;
     }
-
     .btn {
       padding: 12px 24px;
       background-color: #7a5df0;
@@ -47,7 +44,6 @@
       transition: background-color 0.3s ease;
       text-decoration: none;
     }
-
     .btn:hover {
       background-color: #a88bff;
     }
@@ -62,33 +58,27 @@
     <button class="btn" onclick="saveAsImage()">📷 保存为图片</button>
   </div>
 
-  <!-- 引入 html2canvas 脚本 -->
+  <!-- html2canvas 用于截图保存 -->
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
-
   <script>
-    const params = new URLSearchParams(window.location.search);
-    const raw = params.get("text");
+    // 从浏览器存储里读取分析结果
+    const text = sessionStorage.getItem("analysisResult");
     const resultDiv = document.getElementById("result");
 
-    if (raw) {
-      try {
-        const decoded = decodeURIComponent(raw);
-        const safeHtml = decoded
-          .replace(/&/g, "&amp;")
-          .replace(/</g, "&lt;")
-          .replace(/>/g, "&gt;")
-          .replace(/\n/g, "<br>");
-        resultDiv.innerHTML = safeHtml;
-      } catch (e) {
-        resultDiv.innerHTML = "<span style='color:red;'>结果解析失败，请重试</span>";
-      }
+    if (text) {
+      // 把换行符变成 <br>，好排版
+      resultDiv.innerHTML = text
+        .replace(/&/g, '&amp;')
+        .replace(/</g, '&lt;')
+        .replace(/>/g, '&gt;')
+        .replace(/\n/g, '<br>');
     } else {
-      resultDiv.innerHTML = "<span style='color:red;'>未能获取到分析内容</span>";
+      resultDiv.innerHTML = "<span style='color:red;'>未能获取到分析内容，请返回首页重新提交。</span>";
     }
 
-    // 保存为图片
+    // 截图并下载
     function saveAsImage() {
-      html2canvas(document.querySelector("#result")).then(canvas => {
+      html2canvas(resultDiv).then(canvas => {
         const link = document.createElement("a");
         link.download = "分析报告.png";
         link.href = canvas.toDataURL();
