--- a/loading.html
+++ b/loading.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <meta charset="UTF-8">
-  <title>正在生成你的专属人格分析报告...</title>
+  <meta charset="UTF-8"/>
+  <title>正在生成你的专属人格分析报告…</title>
   <style>
     body {
       background-color: #1a1133;
@@ -25,52 +25,43 @@
       animation: spin 1s linear infinite;
     }
     @keyframes spin {
-      0% { transform: rotate(0deg); }
+      0%   { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
     h2, p { margin: 10px 0; }
   </style>
 </head>
 <body>
-  <h2>正在生成你的专属人格分析报告...</h2>
+  <h2>正在生成你的专属人格分析报告…</h2>
   <div class="spinner"></div>
-  <p>请耐心等待，稍后自动跳转</p>
+  <p>请耐心等待，约 10 秒后自动跳转</p>
 
   <script>
-    // 从 sessionStorage 拿到用户填写的信息
-    const birth_date  = sessionStorage.getItem('birth_date')  || '';
-    const birth_time  = sessionStorage.getItem('birth_time')  || '';
-    const birth_city  = sessionStorage.getItem('birth_city')  || '';
-    const mbti        = sessionStorage.getItem('mbti')        || '';
+    // 1. 读取 index.html 存下的用户信息
+    const birth_date = sessionStorage.getItem('birth_date') || '';
+    const birth_time = sessionStorage.getItem('birth_time') || '';
+    const birth_city = sessionStorage.getItem('birth_city') || '';
+    const mbti       = sessionStorage.getItem('mbti')       || '';
 
-    // Make Webhook 地址
+    // 2. 同步模式下的 Make Webhook 地址 —— 改成你自己的 URL
     const webhookURL = 'https://hook.us2.make.com/qc2cyluvofpxxcwiaqsiap59uc9quex8';
 
-    // 发请求给 Make
+    // 3. 发请求，并用 res.text() 直接拿纯文本
     fetch(webhookURL, {
       method: 'POST',
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({
-        birth_date: birth_date,
-        birth_time: birth_time,
-        birth_city: birth_city,
-        mbti: mbti
-      })
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ birth_date, birth_time, birth_city, mbti })
     })
     .then(res => {
-      if (!res.ok) throw new Error('网络错误: ' + res.status);
-      return res.json();
+      if (!res.ok) throw new Error('网络错误：' + res.status);
+      return res.text();
     })
-    .then(data => {
-      if (!data.result) throw new Error('返回数据中没有 result 字段');
-      // 存下结果
-      sessionStorage.setItem('analysisResult', data.result);
-      // 延迟 10 秒后再跳转到结果页
+    .then(text => {
+      // 4. 保存整个文本，10 秒后跳到结果页
+      sessionStorage.setItem('analysisResult', text);
       setTimeout(() => {
         window.location.href = 'result.html';
-      }, 10000); // 10000 毫秒 = 10 秒
+      }, 10000);
     })
     .catch(err => {
       document.body.innerHTML = `
