--- a/result.html
+++ b/result.html
@@ -2,87 +2,107 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>你的个性分析报告</title>
   <style>
     body {
-      background-color: #1a1133;
-      color: #b095ff;
-      font-family: Arial, sans-serif;
-      padding: 40px;
-      line-height: 1.8;
       margin: 0;
+      padding: 0;
+      background: #1a1133;
+      color: #ececff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
-    h1 {
-      color: #d1b2ff;
+    header {
       text-align: center;
-      margin-bottom: 30px;
+      padding: 30px 20px;
+      background: #2a1b4d;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.6);
     }
-    .report {
-      background-color: #2a1b4d;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px #7a5df0;
-      max-width: 800px;
-      margin: auto;
+    header h1 {
+      margin: 0;
+      font-size: 2.2rem;
+      color: #d1b2ff;
     }
-    /* 用来截图的容器 */
-    #reportContainer {
-      white-space: pre-wrap;
-      word-break: break-word;
-    }
-    .button-group {
+    .report-container {
+      flex: 1;
       display: flex;
       justify-content: center;
-      gap: 20px;
-      margin-top: 40px;
+      align-items: flex-start;
+      padding: 20px;
+    }
+    .report {
+      background: #2a1b4d;
+      padding: 30px;
+      border-radius: 12px;
+      max-width: 800px;
+      width: 100%;
+      box-shadow: 0 0 15px rgba(122, 93, 240, 0.4);
+      overflow-y: auto;
+      white-space: pre-wrap;
+      line-height: 1.6;
+      font-size: 1rem;
+    }
+    .report h2 {
+      margin-top: 1.5em;
+      color: #b095ff;
+      font-size: 1.2rem;
+    }
+    .button-group {
+      text-align: center;
+      padding: 20px;
+      background: #2a1b4d;
     }
     .btn {
+      margin: 0 10px;
       padding: 12px 24px;
-      background-color: #7a5df0;
-      color: white;
+      background: linear-gradient(to right, #a88bff, #7a5df0);
+      color: #fff;
       border: none;
       border-radius: 8px;
-      font-size: 16px;
+      font-size: 1rem;
       cursor: pointer;
-      transition: background-color 0.3s ease;
       text-decoration: none;
+      transition: background 0.3s;
     }
     .btn:hover {
-      background-color: #a88bff;
+      background: linear-gradient(to right, #7a5df0, #a88bff);
     }
   </style>
 </head>
 <body>
-  <h1>你的个性分析报告</h1>
-
-  <div class="report" id="reportContainer">
-    <pre id="analysis">加载中，请稍候…</pre>
+  <header>
+    <h1>你的个性分析报告</h1>
+  </header>
+  <div class="report-container">
+    <div class="report" id="analysis">加载中，请稍候…</div>
   </div>
-
   <div class="button-group">
     <a href="index.html" class="btn">← 返回首页</a>
     <button class="btn" onclick="saveAsImage()">📷 保存为图片</button>
   </div>
 
-  <!-- html2canvas 用于截图 -->
+  <!-- 截图依赖 -->
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <script>
-    // 从 sessionStorage 读取 loading.html 存下来的结果
-    const analysis = sessionStorage.getItem('analysisResult');
-    const pre = document.getElementById('analysis');
-
-    if (analysis) {
-      // 直接放到 pre 标签里，会自动保留换行
-      pre.textContent = analysis;
-    } else {
-      pre.textContent = '❗ 未能获取到分析内容，请返回首页重新提交。';
-      pre.style.color = 'red';
+    // 取出 raw 返回值
+    const raw = sessionStorage.getItem('analysisResult') || '';
+    let content;
+    try {
+      const obj = JSON.parse(raw);
+      content = obj.result;
+    } catch (e) {
+      content = raw;
     }
+    // 渲染纯文本，保留换行
+    document.getElementById('analysis').textContent = content;
 
-    // 截图并触发下载
+    // 保存截图
     function saveAsImage() {
-      const container = document.getElementById('reportContainer');
-      html2canvas(container).then(canvas => {
+      const container = document.getElementById('analysis');
+      html2canvas(container, { backgroundColor: null }).then(canvas => {
         const link = document.createElement('a');
         link.download = '分析报告.png';
         link.href = canvas.toDataURL();
