--- a/loading.html
+++ b/loading.html
@@ -34,19 +34,27 @@
 <body>
   <h2>正在生成你的专属人格分析报告…</h2>
   <div class="spinner"></div>
-  <p>请耐心等待，约 10 秒后自动跳转</p>
+  <p id="loadingTip">预计需要 60 秒，请耐心等待…</p>
 
   <script>
-    // 1. 读取 index.html 存下的用户信息
     const birth_date = sessionStorage.getItem('birth_date') || '';
     const birth_time = sessionStorage.getItem('birth_time') || '';
     const birth_city = sessionStorage.getItem('birth_city') || '';
     const mbti       = sessionStorage.getItem('mbti')       || '';
 
-    // 2. 同步模式下的 Make Webhook 地址 —— 改成你自己的 URL
     const webhookURL = 'https://hook.us2.make.com/qc2cyluvofpxxcwiaqsiap59uc9quex8';
 
-    // 3. 发请求，并用 res.text() 直接拿纯文本
+    const tipEl = document.getElementById('loadingTip');
+    let seconds = 0;
+
+    // 每秒更新提示
+    const interval = setInterval(() => {
+      seconds++;
+      if (seconds <= 180) {  // 最长显示 3 分钟
+        tipEl.textContent = `已等待 ${seconds} 秒，预计需要 60-120 秒，请耐心等待…`;
+      }
+    }, 1000);
+
     fetch(webhookURL, {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
@@ -57,13 +65,13 @@
       return res.text();
     })
     .then(text => {
-      // 4. 保存整个文本，10 秒后跳到结果页
+      clearInterval(interval);
       sessionStorage.setItem('analysisResult', text);
-      setTimeout(() => {
-        window.location.href = 'result.html';
-      }, 10000);
+      // 请求成功后直接跳转，无需再等待
+      window.location.href = 'result.html';
     })
     .catch(err => {
+      clearInterval(interval);
       document.body.innerHTML = `
         <h2 style="color:red;">出错了：</h2>
         <pre style="color:#fff; background:#330033; padding:10px; border-radius:5px;">
