--- a/index.html
+++ b/index.html
@@ -34,15 +34,23 @@
     }
     .form-group { margin-bottom: 20px; }
     label { display: block; margin-bottom: 5px; font-weight: 600; }
-    input, select, button {
+    select, input, button {
       width: 100%; padding: 10px; border: none; border-radius: 8px; font-size: 16px;
     }
-    input, select { background-color: #423c6d; color: white; }
+    select, input { background-color: #423c6d; color: white; }
     button {
       background: linear-gradient(to right, #a16eff, #7657ff);
       color: white; cursor: pointer; transition: opacity 0.2s ease;
     }
     button:hover { opacity: 0.85; }
+    .inline-selects {
+      display: flex;
+      justify-content: space-between;
+      gap: 5px;
+    }
+    .inline-selects select {
+      flex: 1;
+    }
   </style>
 </head>
 <body>
@@ -52,29 +60,32 @@
 
     <form id="analysis-form">
       <div class="form-group">
-        <label for="birth-date">出生日期</label>
-        <input type="date" id="birth-date" name="birth_date" required/>
+        <label>出生日期</label>
+        <div class="inline-selects">
+          <select id="birth-year" required></select>
+          <select id="birth-month" required></select>
+          <select id="birth-day" required></select>
+        </div>
       </div>
       <div class="form-group">
-        <label for="birth-time">出生时间</label>
-        <input type="time" id="birth-time" name="birth_time" required/>
+        <label>出生时间</label>
+        <div class="inline-selects">
+          <select id="birth-hour" required></select>
+          <select id="birth-minute" required></select>
+        </div>
       </div>
       <div class="form-group">
         <label for="birth-city">出生城市</label>
-        <input type="text" id="birth-city" name="birth_city" placeholder="如：北京、上海、广州" required/>
+        <input type="text" id="birth-city" placeholder="如：北京、上海、广州" required/>
       </div>
       <div class="form-group">
         <label for="mbti">MBTI 类型</label>
-        <select id="mbti" name="mbti" required>
+        <select id="mbti" required>
           <option value="">选择您的MBTI类型</option>
-          <option>INFP</option><option>INFJ</option>
-          <option>ENFP</option><option>ENFJ</option>
-          <option>INTP</option><option>INTJ</option>
-          <option>ENTP</option><option>ENTJ</option>
-          <option>ISFP</option><option>ISFJ</option>
-          <option>ESFP</option><option>ESFJ</option>
-          <option>ISTP</option><option>ISTJ</option>
-          <option>ESTP</option><option>ESTJ</option>
+          <option>INFP</option><option>INFJ</option><option>ENFP</option><option>ENFJ</option>
+          <option>INTP</option><option>INTJ</option><option>ENTP</option><option>ENTJ</option>
+          <option>ISFP</option><option>ISFJ</option><option>ESFP</option><option>ESFJ</option>
+          <option>ISTP</option><option>ISTJ</option><option>ESTP</option><option>ESTJ</option>
         </select>
       </div>
       <button type="submit">开始分析</button>
@@ -82,14 +93,53 @@
   </div>
 
   <script>
+    // 填充年份
+    const yearSelect = document.getElementById('birth-year');
+    const currentYear = new Date().getFullYear();
+    for (let y = currentYear; y >= 1900; y--) {
+      yearSelect.innerHTML += `<option value="${y}">${y}年</option>`;
+    }
+
+    // 填充月份
+    const monthSelect = document.getElementById('birth-month');
+    for (let m = 1; m <= 12; m++) {
+      monthSelect.innerHTML += `<option value="${m.toString().padStart(2, '0')}">${m}月</option>`;
+    }
+
+    // 填充日期
+    const daySelect = document.getElementById('birth-day');
+    function updateDays() {
+      const year = parseInt(yearSelect.value);
+      const month = parseInt(monthSelect.value);
+      const days = new Date(year, month, 0).getDate();
+      daySelect.innerHTML = '';
+      for (let d = 1; d <= days; d++) {
+        daySelect.innerHTML += `<option value="${d.toString().padStart(2, '0')}">${d}日</option>`;
+      }
+    }
+    yearSelect.addEventListener('change', updateDays);
+    monthSelect.addEventListener('change', updateDays);
+    updateDays();
+
+    // 填充小时和分钟
+    const hourSelect = document.getElementById('birth-hour');
+    const minuteSelect = document.getElementById('birth-minute');
+    for (let h = 0; h < 24; h++) {
+      hourSelect.innerHTML += `<option value="${h.toString().padStart(2, '0')}">${h}时</option>`;
+    }
+    for (let m = 0; m < 60; m += 5) {
+      minuteSelect.innerHTML += `<option value="${m.toString().padStart(2, '0')}">${m}分</option>`;
+    }
+
+    // 提交逻辑
     document.getElementById('analysis-form').addEventListener('submit', function(e) {
       e.preventDefault();
-      // 1. 存表单数据
-      sessionStorage.setItem('birth_date',  document.getElementById('birth-date').value);
-      sessionStorage.setItem('birth_time',  document.getElementById('birth-time').value);
-      sessionStorage.setItem('birth_city',  document.getElementById('birth-city').value);
-      sessionStorage.setItem('mbti',        document.getElementById('mbti').value);
-      // 2. 跳转到 loading 页面
+      const birth_date = `${yearSelect.value}-${monthSelect.value}-${daySelect.value}`;
+      const birth_time = `${hourSelect.value}:${minuteSelect.value}`;
+      sessionStorage.setItem('birth_date', birth_date);
+      sessionStorage.setItem('birth_time', birth_time);
+      sessionStorage.setItem('birth_city', document.getElementById('birth-city').value);
+      sessionStorage.setItem('mbti', document.getElementById('mbti').value);
       window.location.href = 'loading.html';
     });
   </script>
